--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ status 3 pool
       padding: 2px;
       padding-right: 40px;
       padding-left: 40px;
+      border: 4px solid;
+      border-color: rgb(214, 245, 255);
       border-radius: 4px;
       cursor: pointer;
       position: relative;
