--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ status 3 pool
   
 
 
-  <link rel="stylesheet" type="text/css" href="djik.css">
-  <script src="djik.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/itsAdityaDatta/DijkstraAlgo/djik.css">
+  <script src="https://cdn.jsdelivr.net/gh/itsAdityaDatta/DijkstraAlgo/djik.js"></script>
 
 
 </head>
