--- a/index.html
+++ b/index.html
@@ -118,39 +118,41 @@ status 3 pool
     }
 
     .slidecontainer {
-  width: 100%;
-}
+      width: 100%;
+    }
 
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 25px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-}
+    .slider {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 13px;
+      border-radius: 5px;
+      background: #d3d3d3;
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+    }
 
-.slider:hover {
-  opacity: 1;
-}
+    .slider:hover {
+      opacity: 1;
+    }
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  background: #4CAF50;
-  cursor: pointer;
-}
+    .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 25px;
+      height: 25px;
+      border-radius: 100%;
+      background: #4CAF50;
+      cursor: pointer;
+    }
 
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  background: #4CAF50;
-  cursor: pointer;
-}
+    .slider::-moz-range-thumb {
+      width: 25px;
+      height: 25px;
+      background: #4CAF50;
+      cursor: pointer;
+    }
    </style>
   <script >
         
@@ -629,12 +631,9 @@ status 3 pool
    <button onclick="wall()" class="button1" id='WB'>Wall</button>&nbsp&nbsp
   <button onclick="erase()" class="button1" id='EW'>EraseWall</button>&nbsp&nbsp
   <button onclick="pool()" class="button1" id='UP'>UberPool</button>&nbsp&nbsp
-  <button onclick="clearAll()" class="button1" >ClearAll</button></div>
+  <button onclick="clearAll()" class="button1" >ClearAll</button></div><br>
+  <input type="range" min="0" max="150" value="50" class="slider" id='inpSpeed' style="width: 40%;margin: auto;transform: scaleX(-1);">
   <div id='canvasDiv' ></div>
-    <br><br>
-    <div style="background-color: white;height: 100px;"><br>
-      <input type="range" min="0" max="150" value="50" class="slider" id='inpSpeed' style="width: 40%;margin: auto;">
-  </div>
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog" style="width: 290px;position: relative;top: 150">
     
