--- a/index.html
+++ b/index.html
@@ -665,7 +665,8 @@ status 3 pool
              2. Place the ending marker <span style="color: blue"> (BLUE)</span><br>
              3. Click on the wall button or the uberPool button as per your desire.<br>
              4. When you're done, click on the FindPath button to find the <br>&nbsp&nbsp&nbsp&nbspshortest path (using Dijkstra's algorithm)<br>
-             5. Finally click on the clearAll button to start again.<br><br>
+             5. You can also change the searching speed using the speed-control slider whenever you want.<br>
+             6. Finally click on the clearAll button to start again.<br><br>
              <div style="background-color: green;color: white;font-family: 'Abel';font-size: 24">&nbsp&nbspU<small>BER</small>P<small>OOL</small>: 
              </div> </p>
              <p style="position: relative;left: 20;font-family: 'Abel'">The program will find the shortest path between the starting and ending markers, which also passes through the uberPool marker, simulating an actual uberPool experience wherein you pick-up an intermediate passenger.</p>
