--- a/index.html
+++ b/index.html
@@ -663,9 +663,9 @@ status 3 pool
         <div id="modal-body2" style="height: 400px;font-size: 18px"><br>
           <p style="position: relative;left: 20;font-family: 'Abel'">1. Place the starting marker <span style="color: red">(RED)</span><br>
              2. Place the ending marker <span style="color: blue"> (BLUE)</span><br>
-             3. Click on the wall button or the uberPool button as per your desire.<br>
-             4. When you're done, click on the FindPath button to find the <br>&nbsp&nbsp&nbsp&nbspshortest path (using Dijkstra's algorithm)<br>
-             5. You can also change the searching speed using the speed-control slider whenever you want.<br>
+             3. Click on the wall button or the <span style="color: green"> uberPool</span> button as per your desire. <br>&nbsp&nbsp&nbsp&nbspYou can also erase your created walls.<br>
+             4. When you're done, click on the FindPath button to find the shortest path.<br>
+             5. You can change the searching speed using the speed-control slider <br>&nbsp&nbsp&nbsp&nbspwhenever you want.<br>
              6. Finally click on the clearAll button to start again.<br><br>
              <div style="background-color: green;color: white;font-family: 'Abel';font-size: 24">&nbsp&nbspU<small>BER</small>P<small>OOL</small>: 
              </div> </p>
