--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ status 3 pool
     .modal-backdrop {
        background-color: #000000;
     }
-
+    .modal-content {
+       border-radius : 0px;
+    }
     .fade.in {
        opacity: 0.93;
     }
