--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@ status 3 pool
     .modal-backdrop {
        background-color: #000000;
     }
-    .modal-content {
-       border-radius : 0px;
-    }
+
     .fade.in {
        opacity: 0.93;
     }
@@ -669,7 +667,7 @@ status 3 pool
              4. When you're done, click on the FindPath button to find the shortest path.<br>
              5. You can change the searching speed using the speed-control slider <br>&nbsp&nbsp&nbsp&nbspwhenever you want.<br>
              6. Finally click on the clearAll button to start again.<br><br>
-             <div style="background-color: green;color: white;font-family: 'Abel';font-size: 24">&nbsp&nbspU<small>BER</small>P<small>OOL</small>: 
+             <div style="background-color: green;color: white;font-family: 'Abel';font-size: 24">&nbsp&nbspUberpool: 
              </div> </p>
              <p style="position: relative;left: 20;font-family: 'Abel'">The program will find the shortest path between the starting and ending markers, which also passes through the uberPool marker, simulating an actual uberPool experience wherein you pick-up an intermediate passenger.</p>
         </div>
