--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@ status 3 pool
       padding: 2px;
       padding-right: 40px;
       padding-left: 40px;
-      border: 4px solid;
-      border-color: rgb(214, 245, 255);
-      border-radius: 4px;
+      border: 4px solid transparent;
       cursor: pointer;
       position: relative;
       top: 10;
@@ -631,7 +629,7 @@ status 3 pool
 </head>
 <body onload="instruc()">
   <div class="Heading"><span style="position: relative">&nbsp D<small>IJKSTRA'S</small> A<small>LGORITHM</small></span></div><br><br>
-  <div  style="text-align: center;margin-left: auto;margin-right: auto;"> 
+  <div  style="text-align: center;margin-left: auto;margin-right: auto;margin-top: 5px;"> 
     <button onclick="Init()" class="button1" id='FP'>FindPath</button>&nbsp&nbsp
    <button onclick="wall()" class="button1" id='WB'>Wall</button>&nbsp&nbsp
   <button onclick="erase()" class="button1" id='EW'>EraseWall</button>&nbsp&nbsp
